--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -9,5 +9,14 @@ body{
   display: flex;
   align-items: center;
   justify-content: center;
+  text-align: center;
   color: var(--red);
+}
+a{
+  color: inherit;
+  text-decoration: none;
+}
+h1{
+  font-size: 60px;
+  margin: 0;
 }
